# gitlab-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  deny.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/gitlab-cli/: Cargo.toml  build.rs  manifest_data.toml
crates/gitlab-cli/src/: context.rs  errout.rs  globals.rs  lib.rs  main.rs  output.rs  safety.rs  tracing_setup.rs
crates/gitlab-cli/src/cmd/: api.rs  branch.rs  commit.rs  config.rs  discussion.rs  file.rs  from_url.rs  group.rs  issue.rs  job.rs  label.rs  manifest.rs  me.rs  mod.rs  mr.rs  note.rs  pipeline.rs  project.rs  repo.rs  search.rs  tag.rs  user.rs  version.rs
crates/gitlab-cli/tests/: api_cmd_test.rs  branch_cmd_test.rs  commit_cmd_test.rs  config_cmd_test.rs  context_test.rs  discussion_cmd_test.rs  errout_test.rs  file_cmd_test.rs  from_url_test.rs  global_args_test.rs  group_cmd_test.rs  issue_cmd_test.rs  job_cmd_test.rs  label_cmd_test.rs  manifest_test.rs  masking_cli_test.rs  mr_cmd_test.rs  note_cmd_test.rs  output_test.rs  pipeline_cmd_test.rs  project_cmd_test.rs  repo_cmd_test.rs  safety_test.rs  search_cmd_test.rs  smoke_live_test.rs  tag_cmd_test.rs  user_cmd_test.rs  version_me_test.rs
crates/gitlab-core/: Cargo.toml
crates/gitlab-core/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  request.rs  retry.rs  throttle.rs
crates/gitlab-core/src/page/: link.rs  mod.rs  stream.rs
crates/gitlab-core/src/resources/: branches.rs  commits.rs  discussions.rs  files.rs  groups.rs  issues.rs  jobs.rs  labels.rs  merge_requests.rs  mod.rs  notes.rs  pipelines.rs  projects.rs  repos.rs  search.rs  tags.rs  users.rs
crates/gitlab-core/tests/: auth_test.rs  client_build_test.rs  config_test.rs  error_classify_test.rs  link_header_test.rs  masking_test.rs  paged_stream_test.rs  request_retry_test.rs  retry_test.rs  smoke_test.rs  throttle_test.rs
docs/superpowers/plans/: 2026-04-17-gitlab-cli.md  2026-04-18-gitlab-cli-agent-ux.md
docs/superpowers/specs/: 2026-04-17-gitlab-cli-14.0.5-design.md
scripts/: update-homebrew-formula.sh
scripts/e2e/: run_ci_log_test.sh  run_full_e2e.sh  run_pipeline_logs_test.sh
