[workspace]
resolver = "2"
members = ["crates/gitlab-core", "crates/gitlab-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/your-org/gitlab-cli"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
