[workspace]
resolver = "2"
members = ["crates/gitlab-core", "crates/gitlab-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "Apache-2.0"
repository = "https://github.com/zhiyue/gitlab-cli"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
