[package]
name = "gitlab-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
url = "2"
async-stream = "0.3"
futures = "0.3"
rand = "0.8"
governor = "0.6"
bytes = "1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
